--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "redux": "^4.1.2",
+    "redux-saga": "^1.2.2",
     "sass": "^1.54.0"
   },
   "devDependencies": {
